# computer-programming-project-c

./: CMakeLists.txt  main.c
modules/: configuration.h  structures.h
modules/cli/: cli.c  cli.h
modules/file/: file.c  file.h
modules/logic/: logic.c  logic.h
modules/utils/: utils.c  utils.h
